# tender-hack

backend/: .gitignore  docker-compose.yml  instruction.json  instruction_complex.json  instruction_simple.json
backend/nebula/: .gitignore  Makefile  instructions.json  pyproject.toml
backend/nebula/conf/: settings.py
backend/nebula/conf/envs/: dev.py  prod.py
backend/nebula/formatter/: __init__.py  parser.py  transformer.py
backend/nebula/services/: api.py  dependencies.py  schemas.py
backend/nebula/services/core/: __init__.py
backend/nebula/services/core/routes/: __init__.py  formatter.py  test.xlsx
backend/nginx/: Dockerfile  nginx.conf
backend/quazar/: README.md  quazar.cabal  stack.yaml
frontend/: package-lock.json  package.json
frontend/src/: base.scss  constants.scss  index.html
frontend/src/app/: app.scss  app.tsx  downloadFile.ts  downloadZone.scss  downloadZone.tsx  entityControl.scss  entityControl.tsx  itemCard.scss  itemCard.tsx  list.tsx  optionsPanel.scss  optionsPanel.tsx  processControl.scss  processControl.tsx  progressControl.scss  progressControl.tsx  repeatPanel.tsx  spinner.tsx  uploadZone.scss  uploadZone.tsx
frontend/src/core/: http.ts  useLoader.ts
frontend/src/data/: actionTypes.ts  epic.ts  model.ts  reducer.ts
frontend/src/data/file/: action.ts  api.ts  epic.ts  models.ts  reducer.ts
frontend/src/shared/base/: button.tsx  checkbox.scss  checkbox.tsx  icon.tsx  line.tsx
frontend/src/shared/fields/: selectBaseField.scss  selectBaseField.tsx
