[tool.poetry]
name = "nebula"
version = "0.1.0"
description = ""
authors = ["Igor Beschastnov <beschastnovigor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
# Base
fastapi = "^0.42.0"
pymongo = "^3.9.0"
# Low level
ujson = "^1.35"
# Deploy
uvicorn = "^0.10.3"
gunicorn = "^20.0.4"
# Other
pydantic = "^0.32.2"
email-validator = "^1.0"

[tool.poetry.dev-dependencies]
# Lint
black = {version = "^19.10b0", allow-prereleases = true}
pylint = "^2.3"
isort = "^4.3"
unify = "^0.5.0"
# Typings
mypy = "^0.761.0"
# Test
pytest = "^5.3"
pytest-mock = "^1.13"
pytest-cov = "^2.8"
# Refactor
rope = "^0.16.0"

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"
