cabal-version: 1.12

name:           quazar
version:        0.1.0
description:    Please see the README at <https://github.com/IgorBeschastnov/tender-hack#readme>
homepage:       https://github.com/IgorBeschastnov/tender-hack#readme
bug-reports:    https://github.com/IgorBeschastnov/tender-hack/issues
author:         Igor Beschastnov
maintainer:     beschastnovigor@gmail.com
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/IgorBeschastnov/tender-hack

executable quazar-exe
  main-is: Main.hs
  other-modules:
      Paths_quazar
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

test-suite quazar-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_quazar
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , quazar
  default-language: Haskell2010
